fixed gaps and gallery issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,14 @@ nav {
     font-size: 2rem;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 /* Media iPad 768px */
 @media screen and (min-width: 768px) {
 
@@ -220,13 +228,18 @@ nav {
         text-align: end;
         align-self: flex-end;
     }
+    #photos {
+        column-count: 3;
+    }
 }
 
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
-
+    #photos {
+    column-count: 4;
+    }
     
 }
 
